--- a/src/web/accounts.html
+++ b/src/web/accounts.html
@@ -4,46 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Calendar MCP - Account Management</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        :root {
-            --bg-warm: #faf8f5;
-            --bg-warm-dark: #f5f2ed;
-            --card-bg: #fffdfb;
-            --text-primary: #3d3832;
-            --text-secondary: #6b6560;
-            --text-muted: #9a948e;
-            --border-warm: #e8e4df;
-            --border-warm-light: #f0ece7;
-            --accent-primary: #c17f59;
-            --accent-primary-hover: #a86d4a;
-            --accent-success: #5d8a66;
-            --accent-success-light: #e8f2ea;
-            --accent-warning: #c49052;
-            --accent-warning-light: #fdf6ed;
-            --accent-danger: #b85c5c;
-            --accent-danger-light: #fceaea;
-            --shadow-sm: 0 1px 2px rgba(61, 56, 50, 0.04);
-            --shadow-md: 0 4px 12px rgba(61, 56, 50, 0.08);
-            --shadow-lg: 0 8px 24px rgba(61, 56, 50, 0.12);
-            --radius-sm: 6px;
-            --radius-md: 10px;
-            --radius-lg: 14px;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background: var(--bg-warm);
-            color: var(--text-primary);
-            line-height: 1.6;
-            min-height: 100vh;
-        }
-
+        /* Page-specific styles for account management */
         .container {
             max-width: 720px;
             margin: 0 auto;
@@ -56,11 +19,7 @@
         }
 
         h1 {
-            font-size: 1.75rem;
-            font-weight: 600;
-            color: var(--text-primary);
             margin-bottom: 0.5rem;
-            letter-spacing: -0.02em;
         }
 
         .subtitle {
@@ -69,13 +28,14 @@
             font-weight: 400;
         }
 
+        /* Card overrides for this page */
         .card {
-            background: var(--card-bg);
-            border-radius: var(--radius-lg);
             padding: 1.75rem;
             margin-bottom: 1.25rem;
             box-shadow: var(--shadow-md);
-            border: 1px solid var(--border-warm-light);
+            text-align: left;
+            min-width: auto;
+            max-width: none;
         }
 
         .card h2 {
@@ -86,6 +46,7 @@
             letter-spacing: -0.01em;
         }
 
+        /* Account list */
         .account-list {
             display: flex;
             flex-direction: column;
@@ -102,7 +63,6 @@
 
         .account-item:hover {
             box-shadow: var(--shadow-sm);
-            border-color: var(--border-warm);
         }
 
         .account-header {
@@ -207,6 +167,7 @@
             margin-left: auto;
         }
 
+        /* Calendar list */
         .calendar-list {
             display: none;
             padding: 0.5rem 1rem 0.75rem;
@@ -323,123 +284,17 @@
             font-size: 0.8rem;
         }
 
-        button {
+        /* Button size overrides for inline buttons */
+        .account-actions button {
             padding: 0.6rem 1.1rem;
-            border: none;
-            border-radius: var(--radius-sm);
             font-size: 0.85rem;
-            cursor: pointer;
-            transition: all 0.15s ease;
-            font-weight: 500;
         }
 
-        .btn-primary {
-            background: var(--accent-primary);
-            color: white;
-            box-shadow: 0 1px 2px rgba(193, 127, 89, 0.2);
-        }
-
-        .btn-primary:hover {
-            background: var(--accent-primary-hover);
-            box-shadow: 0 2px 4px rgba(193, 127, 89, 0.25);
-            transform: translateY(-1px);
-        }
-
-        .btn-danger {
-            background: transparent;
-            color: var(--accent-danger);
-            border: 1px solid var(--border-warm);
-        }
-
-        .btn-danger:hover {
-            background: var(--accent-danger-light);
-            border-color: var(--accent-danger);
-        }
-
-        .btn-warning {
-            background: var(--accent-warning);
-            color: white;
-            box-shadow: 0 1px 2px rgba(196, 144, 82, 0.2);
-        }
-
-        .btn-warning:hover {
-            background: #b5823f;
-            box-shadow: 0 2px 4px rgba(196, 144, 82, 0.25);
-            transform: translateY(-1px);
-        }
-
+        /* Add account form */
         .add-account-form {
             display: flex;
             gap: 1rem;
             align-items: flex-end;
-        }
-
-        .form-group {
-            flex: 1;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 500;
-            font-size: 0.85rem;
-            color: var(--text-secondary);
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 0.7rem 0.9rem;
-            border: 1px solid var(--border-warm);
-            border-radius: var(--radius-sm);
-            font-size: 0.9rem;
-            background: var(--bg-warm);
-            color: var(--text-primary);
-            transition: all 0.15s ease;
-        }
-
-        input[type="text"]::placeholder {
-            color: var(--text-muted);
-        }
-
-        input[type="text"]:focus {
-            outline: none;
-            border-color: var(--accent-primary);
-            background: var(--card-bg);
-            box-shadow: 0 0 0 3px rgba(193, 127, 89, 0.1);
-        }
-
-        .empty-state {
-            text-align: center;
-            padding: 2.5rem 1rem;
-            color: var(--text-muted);
-            font-size: 0.9rem;
-        }
-
-        .loading {
-            text-align: center;
-            padding: 2.5rem 1rem;
-            color: var(--text-muted);
-            font-size: 0.9rem;
-        }
-
-        .error {
-            background: var(--accent-danger-light);
-            color: var(--accent-danger);
-            padding: 1rem 1.25rem;
-            border-radius: var(--radius-sm);
-            margin-bottom: 1rem;
-            font-size: 0.9rem;
-            border: 1px solid rgba(184, 92, 92, 0.2);
-        }
-
-        .success {
-            background: var(--accent-success-light);
-            color: var(--accent-success);
-            padding: 1rem 1.25rem;
-            border-radius: var(--radius-sm);
-            margin-bottom: 1rem;
-            font-size: 0.9rem;
-            border: 1px solid rgba(93, 138, 102, 0.2);
         }
 
         @media (max-width: 600px) {
@@ -507,7 +362,7 @@
 
         function showMessage(message, type = 'success') {
             const messageDiv = document.getElementById('message');
-            messageDiv.className = type;
+            messageDiv.className = 'message-' + type;
             messageDiv.textContent = message;
             setTimeout(() => {
                 messageDiv.className = '';
@@ -528,7 +383,7 @@
                 renderAccounts(data.accounts);
             } catch (error) {
                 document.getElementById('accountList').innerHTML =
-                    `<div class="error">Error loading accounts: ${error.message}</div>`;
+                    `<div class="message-error">Error loading accounts: ${error.message}</div>`;
             }
         }
 
