docs: use 'nickname' terminology and document manage-accounts tool
- Replace 'account ID' with 'nickname' in user-facing messages and docs
- Document manage-accounts tool as the recommended way to manage accounts
- Update web UI labels (accounts.html, auth-landing.html)
- Add unit tests for ManageAccountsHandler, AuthServer, and TokenManager

--- a/src/web/accounts.html
+++ b/src/web/accounts.html
@@ -333,14 +333,14 @@
             <h2>Add Account</h2>
             <form class="add-account-form" id="addAccountForm">
                 <div class="form-group">
-                    <label for="accountId">Account ID</label>
+                    <label for="accountId">Account Nickname</label>
                     <input
                         type="text"
                         id="accountId"
                         name="accountId"
                         placeholder="e.g., work, personal, home"
                         pattern="[a-z0-9_-]{1,64}"
-                        title="1-64 characters: lowercase letters, numbers, dashes, underscores only"
+                        title="Choose a friendly name: 1-64 characters (lowercase letters, numbers, dashes, underscores)"
                         required
                     >
                 </div>
