--- a/src/web/auth-landing.html
+++ b/src/web/auth-landing.html
@@ -8,10 +8,10 @@
 </head>
 <body class="centered">
     <div class="card">
-        <h1>Google Calendar Authentication</h1>
+        <h1>Connect Google Account</h1>
         <div class="info-box">
-            <p><strong>Account:</strong> <code>{{accountId}}</code></p>
-            <p>You are authenticating for the <strong>{{accountId}}</strong> account.</p>
+            <p>You're connecting a Google account with the nickname:</p>
+            <p><strong><code>{{accountId}}</code></strong></p>
         </div>
         <a href="{{authUrl}}" class="btn-primary">Authenticate with Google</a>
     </div>
