--- a/src/ui/day-view/day-view.html
+++ b/src/ui/day-view/day-view.html
@@ -8,23 +8,40 @@
 </head>
 <body>
   <div id="app">
-    <div class="day-view-header">
-      <h2 id="date-heading">Loading...</h2>
-      <a id="day-link" href="#" target="_blank" class="open-calendar-btn" style="display: none;">Open in Calendar</a>
+    <!-- Single-day view (time grid) -->
+    <div id="day-view-container">
+      <div class="day-view-header">
+        <h2 id="date-heading">Loading...</h2>
+        <a id="day-link" href="#" target="_blank" class="open-calendar-btn" style="display: none;">Open in Calendar</a>
+      </div>
+      <div id="all-day-section" class="all-day-section" style="display: none;">
+        <div class="all-day-label">All day</div>
+        <div id="all-day-events" class="all-day-events"></div>
+      </div>
+      <div id="time-grid" class="time-grid compact">
+        <!-- Time slots and events rendered here -->
+      </div>
+      <button id="expand-toggle" class="expand-toggle" style="display: none;">
+        <span id="toggle-text">Show more</span>
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <polyline points="6 9 12 15 18 9"></polyline>
+        </svg>
+      </button>
     </div>
-    <div id="all-day-section" class="all-day-section" style="display: none;">
-      <div class="all-day-label">All day</div>
-      <div id="all-day-events" class="all-day-events"></div>
+
+    <!-- Multi-day view (list grouped by date) -->
+    <div id="multi-day-view-container" style="display: none;">
+      <div class="multi-day-header">
+        <div class="multi-day-title-row">
+          <h2 id="multi-day-heading">Events</h2>
+          <a id="multi-day-link" href="#" target="_blank" class="open-calendar-btn">Open in Calendar</a>
+        </div>
+        <div id="multi-day-subheading" class="multi-day-subheading"></div>
+      </div>
+      <div id="multi-day-events-list" class="multi-day-events-list">
+        <!-- Date groups and events rendered here -->
+      </div>
     </div>
-    <div id="time-grid" class="time-grid compact">
-      <!-- Time slots and events rendered here -->
-    </div>
-    <button id="expand-toggle" class="expand-toggle" style="display: none;">
-      <span id="toggle-text">Show more</span>
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-        <polyline points="6 9 12 15 18 9"></polyline>
-      </svg>
-    </button>
   </div>
   <script type="module" src="./day-view.ts"></script>
 </body>
